# crypto-tracker-cli

./: .gitignore  LICENSE  README.md  changelog.md  cli.py  contributing.md  git-cliff.toml  pyproject.toml  snapshots.csv
.github/workflows/: changelog.yml  ci.yml  release.yml  testpypi.yml
core/: portfolio.py
scheduler/: runner.py
services/: coingecko_client.py  html_fallback.py  notify.py
storage/: json_store.py
tests/: test_alert_webhook_integration.py  test_coingecko_client.py  test_fallback_cache.py  test_guard_config.py  test_html_fallback.py  test_incremental_rollup.py  test_json_store.py  test_notify_webhook.py  test_outlier_guard.py  test_portfolio.py
utils/: formatting.py  lock.py  logging.py  timeutils.py
