[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-tracker-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests", "beautifulsoup4", "rich", "apscheduler"]
description = "Command-line crypto tracker with CoinGecko, snapshots, and a daemon."

# This creates the 'crypto' command that calls main() in cli.py
[project.scripts]
crypto = "cli:main"

# Tell setuptools exactly what to package in a flat layout
[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "storage*", "scheduler*", "utils*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "storage", "scheduler", "utils"]

[tool.black]
target-version = ["py311"]
line-length = 100
exclude = '''
/(
  \.git
 | \.venv
 | venv
 | build
 | dist
)/
'''

